added "!" to button via github.dev

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
         <button type="submit">Send</button>
     </form>
     <form id="close-form">
-        <button type="submit">Close Connection</button>
+        <button type="submit">Close Connection !</button>
     </form>
     <div id="messages"></div>
     <script src="index.js"></script>
